@@ -81,7 +81,7 @@ public class UByteArray extends PrimitiveArray {
      * @param index The index in question
      * @return true if the value is a missing value.
      */
-    public boolean isMaxValue(int index) {
+    public boolean isMaxValue(final int index) {
         return getPacked(index) == PACKED_MAX_VALUE;
     }
 
@@ -92,27 +92,27 @@ public class UByteArray extends PrimitiveArray {
      * @param index The index in question
      * @return true if the value is a missing value.
      */
-    public boolean isMissingValue(int index) {
+    public boolean isMissingValue(final int index) {
         return maxIsMV && isMaxValue(index);
     }
 
     /**
      * This packs a signed int holding an unsigned byte as a byte.
      */
-    public static byte pack(int i) {
+    public static byte pack(final int i) {
         return i < 0 || i >= MAX_VALUE? PACKED_MAX_VALUE : (byte)(i & MAX_VALUE);
     }
     /**
      * This packs a signed long holding an unsigned byte as a byte.
      */
-    public static byte pack(long i) {
+    public static byte pack(final long i) {
         return (byte)(i & 0xff);
     }
 
     /**
      * This unpacks a ubyte stored in a byte as a short.
      */
-    public static short unpack(byte b) {
+    public static short unpack(final byte b) {
         return b >= 0? b : (short)(b + MAX_VALUE + 1);
     }
 
@@ -147,7 +147,7 @@ public class UByteArray extends PrimitiveArray {
      *
      * @param primitiveArray a primitiveArray of any type 
      */
-    public UByteArray(PrimitiveArray primitiveArray) {
+    public UByteArray(final PrimitiveArray primitiveArray) {
         array = new byte[primitiveArray.size()]; //exact size
         append(primitiveArray);
     }
@@ -159,7 +159,7 @@ public class UByteArray extends PrimitiveArray {
      * @param active if true, size will be set to capacity and all elements 
      *    will equal 0; else size = 0.
      */
-    public UByteArray(int capacity, boolean active) {
+    public UByteArray(final int capacity, final boolean active) {
         Math2.ensureMemoryAvailable(1L * capacity, "UByteArray");
         array = new byte[capacity];
         if (active) 
@@ -172,7 +172,7 @@ public class UByteArray extends PrimitiveArray {
      *
      * @param anArray the array with already packed values.
      */
-    public UByteArray(byte[] anArray) {
+    public UByteArray(final byte[] anArray) {
         array = anArray;
         size = anArray.length;
     }
@@ -183,7 +183,7 @@ public class UByteArray extends PrimitiveArray {
      *
      * @param anArray the array with not-yet-packed values.
      */
-    public UByteArray(short[] anArray) {
+    public UByteArray(final short[] anArray) {
         size = anArray.length;
         Math2.ensureMemoryAvailable(1L * size, "UByteArray");
         array = new byte[size];
@@ -197,7 +197,7 @@ public class UByteArray extends PrimitiveArray {
      * @param first the value of the first element.
      * @param last the value of the last element (inclusive!).
      */
-    public UByteArray(int first, int last) {
+    public UByteArray(final int first, final int last) {
         size = last - first + 1;
         array = new byte[size];
         for (int i = 0; i < size; i++) 
@@ -210,9 +210,9 @@ public class UByteArray extends PrimitiveArray {
      * @param fileName is the (usually canonical) path (dir+name) for the file
      * @throws Exception if trouble
      */
-    public UByteArray(String fileName) throws Exception {
+    public UByteArray(final String fileName) throws Exception {
         this();
-        InputStream stream = File2.getDecompressedBufferedInputStream(fileName);
+        final InputStream stream = File2.getDecompressedBufferedInputStream(fileName);
         try {
             int available = stream.available();
             while (available > 0) {
@@ -241,16 +241,16 @@ public class UByteArray extends PrimitiveArray {
      *   converted to bytes.
      * @return a UByteArray
      */
-    public static UByteArray toBooleanToUByte(PrimitiveArray pa) {
-        int size = pa.size();
-        boolean paMaxIsMV = pa.getMaxIsMV();
-        UByteArray ba = new UByteArray(size, true); //active
-        byte bar[] = ba.array;
-        byte zero = 0;
-        byte one = 1;
+    public static UByteArray toBooleanToUByte(final PrimitiveArray pa) {
+        final int size = pa.size();
+        final boolean paMaxIsMV = pa.getMaxIsMV();
+        final UByteArray ba = new UByteArray(size, true); //active
+        final byte bar[] = ba.array;
+        final byte zero = 0;
+        final byte one = 1;
         if (pa.elementType() == PAType.STRING) {
             for (int i = 0; i < size; i++) {
-                int ti = String2.parseBooleanToInt(pa.getString(i)); //returns 0, 1, or Integer.MAX_VALUE
+                final int ti = String2.parseBooleanToInt(pa.getString(i)); //returns 0, 1, or Integer.MAX_VALUE
                 if (ti == Integer.MAX_VALUE) {
                     ba.setMaxIsMV(true);
                     bar[i] = Byte.MAX_VALUE;
@@ -258,10 +258,9 @@ public class UByteArray extends PrimitiveArray {
                     bar[i] = (byte)ti;
                 }
             }
-        } else if (pa instanceof CharArray) {
-            CharArray ca = (CharArray)pa;
+        } else if (pa instanceof CharArray ca) {
             for (int i = 0; i < size; i++) {
-                char c = ca.get(i);
+                final char c = ca.get(i);
                 if (paMaxIsMV && c == Character.MAX_VALUE) {
                     ba.setMaxIsMV(true);
                     bar[i] = PACKED_MAX_VALUE;
@@ -269,10 +268,9 @@ public class UByteArray extends PrimitiveArray {
                     bar[i] = "0fF".indexOf(ca.get(i)) >= 0? zero : one;
                 }
             }
-        } else if (pa instanceof LongArray) {
-            LongArray la = (LongArray)pa;
+        } else if (pa instanceof LongArray la) {
             for (int i = 0; i < size; i++) {
-                long tl = la.get(i);
+                final long tl = la.get(i);
                 if (paMaxIsMV && tl == Long.MAX_VALUE) {
                     ba.setMaxIsMV(true);
                     bar[i] = PACKED_MAX_VALUE;
@@ -280,10 +278,9 @@ public class UByteArray extends PrimitiveArray {
                     bar[i] = tl == 0? zero : one;
                 }
             }
-        } else if (pa instanceof ULongArray) {
-            ULongArray ua = (ULongArray)pa;
+        } else if (pa instanceof ULongArray ua) {
             for (int i = 0; i < size; i++) {
-                BigInteger tul = ua.get(i);
+                final BigInteger tul = ua.get(i);
                 if (paMaxIsMV && tul.equals(ULongArray.MAX_VALUE)) {
                     ba.setMaxIsMV(true);
                     bar[i] = PACKED_MAX_VALUE;
@@ -293,7 +290,7 @@ public class UByteArray extends PrimitiveArray {
             }
         } else {  //byte, ubyte, short, ushort, int, uint, float, double
             for (int i = 0; i < size; i++) {
-                double td = pa.getDouble(i);
+                final double td = pa.getDouble(i);
                 if (Double.isNaN(td)) {
                     ba.setMaxIsMV(true);
                     bar[i] = PACKED_MAX_VALUE;
@@ -316,7 +313,7 @@ public class UByteArray extends PrimitiveArray {
      */
     public PrimitiveArray makeSignedPA() {
         Math2.ensureMemoryAvailable(1L * size, "UByteArray");
-        byte ar[] = new byte[size];
+        final byte ar[] = new byte[size];
         System.arraycopy(array, 0, ar, 0, size);
         return new ByteArray(ar);
     }
@@ -331,7 +328,7 @@ public class UByteArray extends PrimitiveArray {
      * @param csv the comma-separated-value string
      * @return a UByteArray from the comma-separated values.
      */
-    public static UByteArray fromCSV(String csv) {
+    public static UByteArray fromCSV(final String csv) {
         return (UByteArray)PrimitiveArray.csvFactory(PAType.UBYTE, csv);
     }
 
@@ -373,6 +370,7 @@ public class UByteArray extends PrimitiveArray {
         for (int i = 0; i < size; i++)
             code = 31*code + array[i];
         return code;
+        //return HashDigest.murmur32(array, size);
     }
 
     /**
@@ -387,7 +385,7 @@ public class UByteArray extends PrimitiveArray {
      *    If new, it will have a backing array with a capacity equal to its size.
      *    If stopIndex &lt; startIndex, this returns PrimitiveArray with size=0;
      */
-    public PrimitiveArray subset(PrimitiveArray pa, int startIndex, int stride, int stopIndex) {
+    public PrimitiveArray subset(final PrimitiveArray pa, final int startIndex, final int stride, int stopIndex) {
         if (pa != null)
             pa.clear();
         if (startIndex < 0)
@@ -401,7 +399,7 @@ public class UByteArray extends PrimitiveArray {
         if (stopIndex < startIndex)
             return pa == null? new UByteArray(new byte[0]) : pa;  //no need to call .setMaxIsMV(maxIsMV) since size=0
 
-        int willFind = strideWillFind(stopIndex - startIndex + 1, stride);
+        final int willFind = strideWillFind(stopIndex - startIndex + 1, stride);
         UByteArray ba = null;
         if (pa == null) {
             ba = new UByteArray(willFind, true);
@@ -410,7 +408,7 @@ public class UByteArray extends PrimitiveArray {
             ba.ensureCapacity(willFind);
             ba.size = willFind;
         }
-        byte tar[] = ba.array;
+        final byte tar[] = ba.array;
         if (stride == 1) {
             System.arraycopy(array, startIndex, tar, 0, willFind);
         } else {
@@ -437,16 +435,18 @@ public class UByteArray extends PrimitiveArray {
      * @return the minimum PAType needed to completely and precisely contain
      * the values in this PA's PAType and tPAType (e.g., when merging two PrimitiveArrays).
      */
-    public PAType needPAType(PAType tPAType) {
-        //if tPAType is smaller or same, return this.PAType
-        if (tPAType == PAType.UBYTE) return PAType.UBYTE;
+    public PAType needPAType(final PAType tPAType) {
+        return switch (tPAType) {
+            //if tPAType is smaller or same, return this.PAType
+            case UBYTE  -> PAType.UBYTE;
 
-        //if sideways
-        if (tPAType == PAType.CHAR)  return PAType.STRING;
-        if (tPAType == PAType.BYTE)  return PAType.SHORT;
+            //if sideways
+            case CHAR   -> PAType.STRING;
+            case BYTE   -> PAType.SHORT;
 
-        //if tPAType is bigger. SHORT, USHORT, INT, UINT, LONG, ULONG, FLOAT, DOUBLE, STRING
-        return tPAType;
+            //if tPAType is bigger. SHORT, USHORT, INT, UINT, LONG, ULONG, FLOAT, DOUBLE, STRING
+            default     -> tPAType;
+        };
     }
 
     /**
@@ -454,7 +454,7 @@ public class UByteArray extends PrimitiveArray {
      *
      * @param value the value to be added to the array
      */
-    public void add(short value) {
+    public void add(final short value) {
         if (size == array.length) //if we're at capacity
             ensureCapacity(size + 1L);
         if (value < 0)
@@ -467,7 +467,7 @@ public class UByteArray extends PrimitiveArray {
      *
      * @param packedValue the already packed value to be added to the array
      */
-    public void addPacked(byte packedValue) {
+    public void addPacked(final byte packedValue) {
         if (size == array.length) //if we're at capacity
             ensureCapacity(size + 1L);
         array[size++] = packedValue;
@@ -482,10 +482,10 @@ public class UByteArray extends PrimitiveArray {
      *    then convert DoubleArray to UByteArray.)
      *    If null or not a Number, this adds MAX_VALUE.
      */
-    public void addObject(Object value) {
+    public void addObject(final Object value) {
         //double is good intermediate because it has the idea of NaN
-        addDouble(value != null && value instanceof Number?
-            ((Number)value).doubleValue() : Double.NaN); 
+        addDouble(value != null && value instanceof Number nu?
+            nu.doubleValue() : Double.NaN); 
     }
 
     /**
@@ -494,7 +494,7 @@ public class UByteArray extends PrimitiveArray {
      * @param sd from an .nc file
      * @param memberName
      */
-    public void add(StructureData sd, String memberName) {
+    public void add(final StructureData sd, final String memberName) {
         addPacked(sd.getScalarByte(memberName));
     }
 
@@ -503,7 +503,7 @@ public class UByteArray extends PrimitiveArray {
      *
      * @param ar an array
      */
-    public void add(byte ar[]) {
+    public void add(final byte ar[]) {
         add(ar, 0, ar.length);
     }    
 
@@ -514,7 +514,7 @@ public class UByteArray extends PrimitiveArray {
      * @param offset the first value to be added
      * @param nBytes the number of values to be added
      */
-    public void add(byte ar[], int offset, int nBytes) {
+    public void add(final byte ar[], final int offset, final int nBytes) {
         ensureCapacity(size + (long)nBytes);
         System.arraycopy(ar, offset, array, size, nBytes);
         size += nBytes;
@@ -527,7 +527,7 @@ public class UByteArray extends PrimitiveArray {
      * @param value the value to be added to the array.
      *    n &lt; 0 throws an Exception.
      */
-    public void addN(int n, short value) {
+    public void addN(final int n, final short value) {
         if (n == 0) return;
         if (n < 0)
             throw new IllegalArgumentException(MessageFormat.format(
@@ -544,7 +544,7 @@ public class UByteArray extends PrimitiveArray {
      * @param index the position where the value should be inserted.
      * @param value the value to be inserted into the array
      */
-    public void atInsert(int index, short value) {
+    public void atInsert(final int index, final short value) {
         if (index < 0 || index > size)
             throw new IllegalArgumentException(MessageFormat.format(
                 ArrayAtInsert, getClass().getSimpleName(), "" + index, "" + size));
@@ -562,8 +562,8 @@ public class UByteArray extends PrimitiveArray {
      * @param index 0..
      * @param value the value, as a String.
      */
-    public void atInsertString(int index, String value) {
-        int ti = String2.parseInt(value); //NaN -> Integer.MAX_VALUE
+    public void atInsertString(final int index, final String value) {
+        final int ti = String2.parseInt(value); //NaN -> Integer.MAX_VALUE
         if (ti < MIN_VALUE || ti > MAX_VALUE) {
             maxIsMV = true;
             atInsert(index, MAX_VALUE);
@@ -579,7 +579,7 @@ public class UByteArray extends PrimitiveArray {
      *    If less than 0, this throws Exception.
      * @param value the value, as a PAOne (or null).
      */
-    public void addNPAOnes(int n, PAOne value) {
+    public void addNPAOnes(final int n, final PAOne value) {
         addNInts(n, value == null? Integer.MAX_VALUE : value.getInt());  //handles NaN and MV
     }
 
@@ -590,7 +590,7 @@ public class UByteArray extends PrimitiveArray {
      *    If less than 0, this throws Exception.
      * @param value the value, as a String.
      */
-    public void addNStrings(int n, String value) {
+    public void addNStrings(final int n, final String value) {
         addNInts(n, String2.parseInt(value)); //handles NaN and MV
     }
 
@@ -601,7 +601,7 @@ public class UByteArray extends PrimitiveArray {
      *    If less than 0, this throws Exception.
      * @param value the value, as a float.
      */
-    public void addNFloats(int n, float value) {
+    public void addNFloats(final int n, final float value) {
         if (!maxIsMV && (!Float.isFinite(value) || value < MIN_VALUE || value > MAX_VALUE)) 
             maxIsMV = true;
         addN(n, Math2.roundToUByte(value));
@@ -614,7 +614,7 @@ public class UByteArray extends PrimitiveArray {
      *    If less than 0, this throws Exception.
      * @param value the value, as a double.
      */
-    public void addNDoubles(int n, double value) {
+    public void addNDoubles(final int n, final double value) {
         if (!maxIsMV && (!Double.isFinite(value) || value < MIN_VALUE || value > MAX_VALUE)) 
             maxIsMV = true;
         addN(n, Math2.roundToUByte(value));
@@ -626,7 +626,7 @@ public class UByteArray extends PrimitiveArray {
      * @param n the number of times 'value' should be added
      * @param value the value, as an int.
      */
-    public void addNInts(int n, int value) {
+    public void addNInts(final int n, final int value) {
         if (value < MIN_VALUE || value > MAX_VALUE) {
             maxIsMV = true;
             addN(n, MAX_VALUE);
@@ -641,7 +641,7 @@ public class UByteArray extends PrimitiveArray {
      * @param n the number of times 'value' should be added
      * @param value the value, as an int.
      */
-    public void addNLongs(int n, long value) {
+    public void addNLongs(final int n, final long value) {
         if (value < MIN_VALUE || value > MAX_VALUE) {
             maxIsMV = true;
             addN(n, MAX_VALUE);
@@ -658,7 +658,7 @@ public class UByteArray extends PrimitiveArray {
      * @param nValues the number of values to be added
      * @return 'this' for convenience
      */
-    public PrimitiveArray addFromPA(PrimitiveArray otherPA, int otherIndex, int nValues) {
+    public PrimitiveArray addFromPA(final PrimitiveArray otherPA, int otherIndex, final int nValues) {
 
         //add from same type
         if (otherPA.elementType() == elementType()) {
@@ -688,7 +688,7 @@ public class UByteArray extends PrimitiveArray {
      * @param otherPA the other PrimitiveArray
      * @param otherIndex the index of the item in otherPA
      */
-    public void setFromPA(int index, PrimitiveArray otherPA, int otherIndex) {
+    public void setFromPA(final int index, final PrimitiveArray otherPA, final int otherIndex) {
         setInt(index, otherPA.getInt(otherIndex)); //handles maxIsMV
     }
 
@@ -698,7 +698,7 @@ public class UByteArray extends PrimitiveArray {
      *
      * @param index the element to be removed, 0 ... size-1
      */
-    public void remove(int index) {
+    public void remove(final int index) {
         if (index >= size)
             throw new IllegalArgumentException(MessageFormat.format(
                 ArrayRemove, getClass().getSimpleName(), "" + index, "" + size));
@@ -714,7 +714,7 @@ public class UByteArray extends PrimitiveArray {
      * @param from the first element to be removed, 0 ... size
      * @param to one after the last element to be removed, from ... size
      */
-    public void removeRange(int from, int to) {
+    public void removeRange(final int from, final int to) {
         if (to > size)
             throw new IllegalArgumentException(String2.ERROR + " in UByteArray.removeRange: to (" + 
                 to + ") > size (" + size + ").");
@@ -738,8 +738,8 @@ public class UByteArray extends PrimitiveArray {
      * @param last  (exclusive)
      * @param destination the destination, can't be in the range 'first+1..last-1'.
      */
-    public void move(int first, int last, int destination) {
-        String errorIn = String2.ERROR + " in UByteArray.move:\n";
+    public void move(final int first, final int last, final int destination) {
+        final String errorIn = String2.ERROR + " in UByteArray.move:\n";
 
         if (first < 0) 
             throw new RuntimeException(errorIn + "first (" + first + ") must be >= 0.");
@@ -761,8 +761,8 @@ public class UByteArray extends PrimitiveArray {
         //String2.log("move initial " + String2.toCSSVString(array));
 
         //store the range to be moved
-        int nToMove = last - first;
-        byte[] temp = new byte[nToMove];
+        final int nToMove = last - first;
+        final byte[] temp = new byte[nToMove];
         System.arraycopy(array, first, temp, 0, nToMove);
 
         //if moving to left...    (draw diagram to visualize this)
@@ -781,8 +781,6 @@ public class UByteArray extends PrimitiveArray {
             System.arraycopy(temp, 0, array, destination - nToMove, nToMove);
         }
         //String2.log("move done " + String2.toCSSVString(array));
-
-
     }
 
     /**
@@ -792,7 +790,7 @@ public class UByteArray extends PrimitiveArray {
      *
      * @param bitset The BitSet indicating which rows (indices) should be kept.
      */
-    public void justKeep(BitSet bitset) {
+    public void justKeep(final BitSet bitset) {
         int newSize = 0;
         for (int row = 0; row < size; row++) {
             if (bitset.get(row)) 
@@ -807,7 +805,7 @@ public class UByteArray extends PrimitiveArray {
      * @param minCapacity the minimum acceptable capacity.
      *    minCapacity is type long, but &gt;= Integer.MAX_VALUE will throw exception.
      */
-    public void ensureCapacity(long minCapacity) {
+    public void ensureCapacity(final long minCapacity) {
         if (array.length < minCapacity) {
             //ensure minCapacity is < Integer.MAX_VALUE
             Math2.ensureArraySizeOkay(minCapacity, "UByteArray");  
@@ -816,7 +814,7 @@ public class UByteArray extends PrimitiveArray {
             if (newCapacity < minCapacity) 
                 newCapacity = (int)minCapacity; //safe since checked above
             Math2.ensureMemoryAvailable(newCapacity, "UByteArray");
-            byte[] newArray = new byte[newCapacity];
+            final byte[] newArray = new byte[newCapacity];
             System.arraycopy(array, 0, newArray, 0, size);
             array = newArray;  //do last to minimize concurrency problems
         }
@@ -857,9 +855,9 @@ public class UByteArray extends PrimitiveArray {
      */
     public double[] toDoubleArray() {
         Math2.ensureMemoryAvailable(8L * size, "UByteArray.toDoubleArray");
-        double dar[] = new double[size];
+        final double dar[] = new double[size];
         for (int i = 0; i < size; i++) {
-            short b = unpack(array[i]);
+            final short b = unpack(array[i]);
             dar[i] = maxIsMV && b == MAX_VALUE? Double.NaN : b;
         }
         return dar;
@@ -873,9 +871,9 @@ public class UByteArray extends PrimitiveArray {
      */
     public String[] toStringArray() {
         Math2.ensureMemoryAvailable(8L * size, "UByteArray.toStringArray"); //8L is feeble minimal estimate
-        String sar[] = new String[size];
+        final String sar[] = new String[size];
         for (int i = 0; i < size; i++) {
-            short b = unpack(array[i]);
+            final short b = unpack(array[i]);
             sar[i] = maxIsMV && b == MAX_VALUE? "" : String.valueOf(b);
         }
         return sar;
@@ -887,7 +885,7 @@ public class UByteArray extends PrimitiveArray {
      * @param index 0 ... size-1
      * @return the specified element
      */
-    public short get(int index) {
+    public short get(final int index) {
         if (index >= size)
             throw new IllegalArgumentException(String2.ERROR + " in UByteArray.get: index (" + 
                 index + ") >= size (" + size + ").");
@@ -900,7 +898,7 @@ public class UByteArray extends PrimitiveArray {
      * @param index 0 ... size-1
      * @return the specified element
      */
-    public byte getPacked(int index) {
+    public byte getPacked(final int index) {
         if (index >= size)
             throw new IllegalArgumentException(String2.ERROR + " in UByteArray.get: index (" + 
                 index + ") >= size (" + size + ").");
@@ -913,7 +911,7 @@ public class UByteArray extends PrimitiveArray {
      * @param index 0 ... size-1
      * @param value the value for that element
      */
-    public void set(int index, short value) {
+    public void set(final int index, final short value) {
         if (index >= size)
             throw new IllegalArgumentException(String2.ERROR + " in UByteArray.set: index (" + 
                 index + ") >= size (" + size + ").");
@@ -928,8 +926,8 @@ public class UByteArray extends PrimitiveArray {
      * @return the value as an int. 
      *   If maxIsMV, MAX_VALUE is returned as Integer.MAX_VALUE.
      */
-    public int getInt(int index) {
-        short b = get(index);
+    public int getInt(final int index) {
+        final short b = get(index);
         return maxIsMV && b == MAX_VALUE? Integer.MAX_VALUE : b;
     }
 
@@ -943,7 +941,7 @@ public class UByteArray extends PrimitiveArray {
      * @return the value as an int. String values are parsed
      *   with String2.parseInt and so may return Integer.MAX_VALUE.
      */
-    public int getRawInt(int index) {
+    public int getRawInt(final int index) {
         return get(index);
     }
 
@@ -954,7 +952,7 @@ public class UByteArray extends PrimitiveArray {
      * @param i the value. For numeric PrimitiveArray's, it is narrowed 
      *   if needed by methods like Math2.narrowToUByte(i).
      */
-    public void setInt(int index, int i) {
+    public void setInt(final int index, final int i) {
         if (i < MIN_VALUE || i > MAX_VALUE) {
             maxIsMV = true;
             set(index, MAX_VALUE);
@@ -970,8 +968,8 @@ public class UByteArray extends PrimitiveArray {
      * @return the value as a long. 
      *   If maxIsMV, MAX_VALUE is returned as Long.MAX_VALUE.
      */
-    public long getLong(int index) {
-        short b = get(index);
+    public long getLong(final int index) {
+        final short b = get(index);
         return maxIsMV && b == MAX_VALUE? Long.MAX_VALUE : b;
     }
 
@@ -982,7 +980,7 @@ public class UByteArray extends PrimitiveArray {
      * @param i the value. For numeric PrimitiveArray's, it is narrowed 
      *   if needed by methods like Math2.narrowToUByte(long).
      */
-    public void setLong(int index, long i) {
+    public void setLong(final int index, final long i) {
         if (i < MIN_VALUE || i > MAX_VALUE) {
             maxIsMV = true;
             set(index, MAX_VALUE);
@@ -998,8 +996,8 @@ public class UByteArray extends PrimitiveArray {
      * @return the value as a ulong. 
      *   If maxIsMV, MAX_VALUE is returned as null.
      */
-    public BigInteger getULong(int index) {
-        short b = get(index);
+    public BigInteger getULong(final int index) {
+        final short b = get(index);
         return maxIsMV && b == MAX_VALUE? null : new BigInteger("" + b);
     }
 
@@ -1010,7 +1008,7 @@ public class UByteArray extends PrimitiveArray {
      * @param i the value. For numeric PrimitiveArray's, it is narrowed 
      *   if needed by methods like Math2.narrowToByte(long).
      */
-    public void setULong(int index, BigInteger i) {
+    public void setULong(final int index, final BigInteger i) {
         setDouble(index, i == null? Double.NaN : i.doubleValue()); //easier to work with. handles NaN. wide range
     }
 
@@ -1023,8 +1021,8 @@ public class UByteArray extends PrimitiveArray {
      *   with String2.parseFloat and so may return Float.NaN.
      *   If maxIsMV, MAX_VALUE is returned as Float.NaN.
      */
-    public float getFloat(int index) {
-        short b = get(index);
+    public float getFloat(final int index) {
+        final short b = get(index);
         return maxIsMV && b == MAX_VALUE? Float.NaN : b;
     }
 
@@ -1035,7 +1033,7 @@ public class UByteArray extends PrimitiveArray {
      * @param d the value. For numeric PrimitiveArray, it is narrowed 
      *   if needed by methods like Math2.roundToUByte(d).
      */
-    public void setFloat(int index, float d) {
+    public void setFloat(final int index, final float d) {
         if (!maxIsMV && (!Float.isFinite(d) || d < MIN_VALUE || d > MAX_VALUE)) 
             maxIsMV = true;
         set(index, Math2.roundToUByte(d));
@@ -1050,8 +1048,8 @@ public class UByteArray extends PrimitiveArray {
      *   with String2.parseDouble and so may return Double.NaN.
      *   If maxIsMV, MAX_VALUE is returned as Double.NaN.
      */
-    public double getDouble(int index) {
-        short b = get(index);
+    public double getDouble(final int index) {
+        final short b = get(index);
         return maxIsMV && b == MAX_VALUE? Double.NaN : b;
     }
 
@@ -1065,7 +1063,7 @@ public class UByteArray extends PrimitiveArray {
      * @return the value as a double. String values are parsed
      *   with String2.parseDouble and so may return Double.NaN.
      */
-    public double getUnsignedDouble(int index) {
+    public double getUnsignedDouble(final int index) {
         //or see https://www.unidata.ucar.edu/software/thredds/current/netcdf-java/reference/faq.html#Unsigned
         return getDouble(index); //already unsigned
     }
@@ -1081,7 +1079,7 @@ public class UByteArray extends PrimitiveArray {
      * @return the value as a double. String values are parsed
      *   with String2.parseDouble and so may return Double.NaN.
      */
-    public double getRawDouble(int index) {
+    public double getRawDouble(final int index) {
         return get(index);
     }
 
@@ -1092,7 +1090,7 @@ public class UByteArray extends PrimitiveArray {
      * @param d the value. For numeric PrimitiveArray, it is narrowed 
      *   if needed by methods like Math2.roundToUByte(d).
      */
-    public void setDouble(int index, double d) {
+    public void setDouble(final int index, final double d) {
         if (!maxIsMV && (!Double.isFinite(d) || d < MIN_VALUE || d > MAX_VALUE)) 
             maxIsMV = true;
         set(index, Math2.roundToUByte(d));
@@ -1107,8 +1105,8 @@ public class UByteArray extends PrimitiveArray {
      *    or "" for NaN or infinity.
      *   If this PA is unsigned, this method returns the unsigned value.
      */
-    public String getString(int index) {
-        byte b = getPacked(index);
+    public String getString(final int index) {
+        final byte b = getPacked(index);
         return maxIsMV && b == PACKED_MAX_VALUE? "" : String.valueOf(unpack(b));
     }
 
@@ -1121,8 +1119,8 @@ public class UByteArray extends PrimitiveArray {
      * @return For numeric types, this returns ("" + ar[index]), or "null" for NaN or infinity.
      *   If this PA is unsigned, this method returns the unsigned value (never "null").
      */
-    public String getJsonString(int index) {
-        byte b = getPacked(index);
+    public String getJsonString(final int index) {
+        final byte b = getPacked(index);
         return maxIsMV && b == PACKED_MAX_VALUE? "null" : String.valueOf(unpack(b));
     }
 
@@ -1138,7 +1136,7 @@ public class UByteArray extends PrimitiveArray {
      * @param index the index number 0 ... size-1
      * @return the value as a String. 
      */
-    public String getRawString(int index) {
+    public String getRawString(final int index) {
         return String.valueOf(get(index));
     }
 
@@ -1149,7 +1147,7 @@ public class UByteArray extends PrimitiveArray {
      * @param s the value. For numeric PrimitiveArray's, it is parsed
      *   with String2.parseInt and narrowed by Math2.narrowToUByte(i).
      */
-    public void setString(int index, String s) {
+    public void setString(final int index, final String s) {
         setInt(index, String2.parseInt(s)); //handles mv
     }
 
@@ -1159,7 +1157,7 @@ public class UByteArray extends PrimitiveArray {
      * @param lookFor the value to be looked for
      * @return the index where 'lookFor' is found, or -1 if not found.
      */
-    public int indexOf(short lookFor) {
+    public int indexOf(final short lookFor) {
         return indexOf(lookFor, 0);
     }
 
@@ -1170,8 +1168,8 @@ public class UByteArray extends PrimitiveArray {
      * @param startIndex 0 ... size-1
      * @return the index where 'lookFor' is found, or -1 if not found.
      */
-    public int indexOf(short lookFor, int startIndex) {
-        byte packedLookFor = pack(lookFor);
+    public int indexOf(final short lookFor, final int startIndex) {
+        final byte packedLookFor = pack(lookFor);
         for (int i = startIndex; i < size; i++) 
             if (array[i] == packedLookFor) 
                 return i;
@@ -1185,7 +1183,7 @@ public class UByteArray extends PrimitiveArray {
      * @param startIndex 0 ... size-1. 
      * @return the index where 'lookFor' is found, or -1 if not found.
      */
-    public int indexOf(String lookFor, int startIndex) {
+    public int indexOf(final String lookFor, final int startIndex) {
         if (startIndex >= size)
             return -1;
         return indexOf(Math2.roundToUByte(String2.parseInt(lookFor)), startIndex);
@@ -1198,11 +1196,11 @@ public class UByteArray extends PrimitiveArray {
      * @param startIndex 0 ... size-1. The search progresses towards 0.
      * @return the index where 'lookFor' is found, or -1 if not found.
      */
-    public int lastIndexOf(short lookFor, int startIndex) {
+    public int lastIndexOf(final short lookFor, final int startIndex) {
         if (startIndex >= size)
             throw new IllegalArgumentException(String2.ERROR + " in UByteArray.get: startIndex (" + 
                 startIndex + ") >= size (" + size + ").");
-        byte packedLookFor = pack(lookFor);
+        final byte packedLookFor = pack(lookFor);
         for (int i = startIndex; i >= 0; i--) 
             if (array[i] == packedLookFor) 
                 return i;
@@ -1216,7 +1214,7 @@ public class UByteArray extends PrimitiveArray {
      * @param startIndex 0 ... size-1. The search progresses towards 0.
      * @return the index where 'lookFor' is found, or -1 if not found.
      */
-    public int lastIndexOf(String lookFor, int startIndex) {
+    public int lastIndexOf(final String lookFor, final int startIndex) {
         return lastIndexOf(Math2.roundToUByte(String2.parseInt(lookFor)), startIndex);
     }
 
@@ -1234,7 +1232,7 @@ public class UByteArray extends PrimitiveArray {
      * @param o the object that will be compared to this UByteArray
      * @return true if equal.  o=null returns false.
      */
-    public boolean equals(Object o) {
+    public boolean equals(final Object o) {
         return testEquals(o).length() == 0;
     }
 
@@ -1246,11 +1244,11 @@ public class UByteArray extends PrimitiveArray {
      * @return a String describing the difference (or "" if equal).
      *   o=null doesn't throw an exception.
      */
-    public String testEquals(Object o) {
+    public String testEquals(final Object o) {
         if (!(o instanceof UByteArray))
             return "The two objects aren't equal: this object is a UByteArray; the other is a " + 
                 (o == null? "null" : o.getClass().getName()) + ".";
-        UByteArray other = (UByteArray)o;
+        final UByteArray other = (UByteArray)o;
         if (other.size() != size)
             return "The two UByteArrays aren't equal: one has " + size + 
                " value(s); the other has " + other.size() + " value(s).";
@@ -1272,7 +1270,7 @@ public class UByteArray extends PrimitiveArray {
      */
     public String toString() {
         //estimate 5 bytes/element
-        StringBuilder sb = new StringBuilder(5 * Math.min(size, (Integer.MAX_VALUE-8192) / 5));
+        final StringBuilder sb = new StringBuilder(5 * Math.min(size, (Integer.MAX_VALUE-8192) / 5));
         for (int i = 0; i < size; i++) {
             if (i > 0)
                 sb.append(", ");
@@ -1288,7 +1286,7 @@ public class UByteArray extends PrimitiveArray {
      * @return an NCCSV attribute String
      */
     public String toNccsvAttString() {
-        StringBuilder sb = new StringBuilder(size * 6);
+        final StringBuilder sb = new StringBuilder(size * 6);
         for (int i = 0; i < size; i++) 
             sb.append((i == 0? "" : ",") + unpack(array[i]) + "ub"); 
         return sb.toString();
@@ -1304,7 +1302,7 @@ public class UByteArray extends PrimitiveArray {
      */
     public void changeSignedToFromUnsigned() {
         for (int i = 0; i < size; i++) {
-            int b = array[i];
+            final int b = array[i];
             array[i] = (byte)(b < 0? b + 128 : 
                                      b - 128);
         }
@@ -1352,7 +1350,7 @@ public class UByteArray extends PrimitiveArray {
      *   the value at index2.  
      *   Think "array[index1] - array[index2]".
      */
-    public int compare(int index1, PrimitiveArray otherPA, int index2) {
+    public int compare(final int index1, final PrimitiveArray otherPA, final int index2) {
         return Integer.compare(getInt(index1), otherPA.getInt(index2));  //int handles mv
     }
 
@@ -1365,7 +1363,7 @@ public class UByteArray extends PrimitiveArray {
      * @param from an index number 0 ... size-1
      * @param to an index number 0 ... size-1
      */
-    public void copy(int from, int to) {
+    public void copy(final int from, final int to) {
         array[to] = array[from];
     }
 
@@ -1378,10 +1376,10 @@ public class UByteArray extends PrimitiveArray {
      * in the sorted list, rank[1] is the row number of the
      * second item in the sorted list, ...).
      */
-    public void reorder(int rank[]) {
-        int n = rank.length;
+    public void reorder(final int rank[]) {
+        final int n = rank.length;
         //new length could be n, but I'll keep it the same array.length as before
-        byte newArray[] = new byte[array.length]; 
+        final byte newArray[] = new byte[array.length]; 
         for (int i = 0; i < n; i++)
             newArray[i] = array[rank[i]];
         array = newArray;
@@ -1402,7 +1400,7 @@ public class UByteArray extends PrimitiveArray {
      * @return the number of bytes used per element
      * @throws Exception if trouble
      */
-    public int writeDos(DataOutputStream dos) throws Exception {
+    public int writeDos(final DataOutputStream dos) throws Exception {
         dos.write(array, 0, size); //special case
         return size == 0? 0 : 1;
     }
@@ -1416,7 +1414,7 @@ public class UByteArray extends PrimitiveArray {
      *    (for Strings, this varies; for others it is consistent)
      * @throws Exception if trouble
      */
-    public int writeDos(DataOutputStream dos, int i) throws Exception {
+    public int writeDos(final DataOutputStream dos, final int i) throws Exception {
         dos.writeByte(array[i]);
         return 1;
     }
@@ -1428,7 +1426,7 @@ public class UByteArray extends PrimitiveArray {
      * @param n the number of elements to be read/added
      * @throws Exception if trouble
      */
-    public void readDis(DataInputStream dis, int n) throws Exception {
+    public void readDis(final DataInputStream dis, final int n) throws Exception {
         ensureCapacity(size + (long)n);
         dis.readFully(array, size, n);
         size += n;
@@ -1442,7 +1440,7 @@ public class UByteArray extends PrimitiveArray {
      * @param dos the DataOutputStream
      * @throws Exception if trouble
      */
-    public void externalizeForDODS(DataOutputStream dos) throws Exception {
+    public void externalizeForDODS(final DataOutputStream dos) throws Exception {
         super.externalizeForDODS(dos); //writes as bytes
 
         //pad to 4 bytes boundary at end
@@ -1460,7 +1458,7 @@ public class UByteArray extends PrimitiveArray {
      * @param i the index of the element to be written
      * @throws Exception if trouble
      */
-    public void externalizeForDODS(DataOutputStream dos, int i) throws Exception {
+    public void externalizeForDODS(final DataOutputStream dos, final int i) throws Exception {
         dos.writeInt(array[i] << 24); //as if byte + 3 padding bytes
     }
 
@@ -1471,7 +1469,7 @@ public class UByteArray extends PrimitiveArray {
      * @param dis the DataInputStream
      * @throws IOException if trouble
      */
-    public void internalizeFromDODS(DataInputStream dis) throws java.io.IOException {
+    public void internalizeFromDODS(final DataInputStream dis) throws java.io.IOException {
         int nValues = dis.readInt();
         dis.readInt(); //skip duplicate of nValues
         ensureCapacity(size + (long)nValues);
@@ -1491,7 +1489,7 @@ public class UByteArray extends PrimitiveArray {
      * @param index
      * @throws Exception if trouble
      */
-    public void writeToRAF(RandomAccessFile raf, int index) throws Exception {
+    public void writeToRAF(final RandomAccessFile raf, final int index) throws Exception {
         raf.writeByte(array[index]);
     }
 
@@ -1502,7 +1500,7 @@ public class UByteArray extends PrimitiveArray {
      * @param raf the RandomAccessFile
      * @throws Exception if trouble
      */
-    public void readFromRAF(RandomAccessFile raf) throws Exception {
+    public void readFromRAF(final RandomAccessFile raf) throws Exception {
         addPacked(raf.readByte());
     }
 
@@ -1514,13 +1512,13 @@ public class UByteArray extends PrimitiveArray {
      * @param pa pa must be the same or a narrower or the same
      *  data type, or the data will be narrowed with Math2.narrowToUByte.
      */
-    public void append(PrimitiveArray pa) {
-        int otherSize = pa.size(); 
+    public void append(final PrimitiveArray pa) {
+        final int otherSize = pa.size(); 
         ensureCapacity(size + (long)otherSize);
-        if (pa instanceof UByteArray) {
+        if (pa instanceof UByteArray ua) {
             if (pa.getMaxIsMV())
                 setMaxIsMV(true);
-            System.arraycopy(((UByteArray)pa).array, 0, array, size, otherSize);
+            System.arraycopy(ua.array, 0, array, size, otherSize);
             size += otherSize;
         } else {
             for (int i = 0; i < otherSize; i++) 
@@ -1538,7 +1536,7 @@ public class UByteArray extends PrimitiveArray {
      * @param pa pa must be the same or a narrower 
      *  data type, or the data will be narrowed with Math2.narrowToUByte.
      */
-    public void rawAppend(PrimitiveArray pa) {
+    public void rawAppend(final PrimitiveArray pa) {
         //since there are no smaller data types than byte, rawAppend() = append()
         append(pa);
     }    
@@ -1552,7 +1550,7 @@ public class UByteArray extends PrimitiveArray {
      * @return a PrimitveArray (the same type as this class) with the unique values, sorted.
      *     If all the values are unique and already sorted, this returns 'this'.
      */
-    public PrimitiveArray makeIndices(IntArray indices) {
+    public PrimitiveArray makeIndices(final IntArray indices) {
         indices.clear();
         if (size == 0) {
             return new UByteArray();
@@ -1560,10 +1558,10 @@ public class UByteArray extends PrimitiveArray {
 
         //make a hashMap with all the unique values (associated values are initially all dummy)
         //(actually bytes could be done more efficiently with a boolean array -128 to 127... )
-        Integer dummy = new Integer(-1);
-        HashMap hashMap = new HashMap(Math2.roundToInt(1.4 * size));
+        final Integer dummy = Integer.valueOf(-1);
+        final HashMap hashMap = new HashMap(Math2.roundToInt(1.4 * size));
         short lastValue = unpack(array[0]); //since lastValue often equals currentValue, cache it
-        hashMap.put(new Short(lastValue), dummy);
+        hashMap.put(Short.valueOf(lastValue), dummy);
         boolean alreadySorted = true;
         for (int i = 1; i < size; i++) {
             short currentValue = unpack(array[i]);
@@ -1571,13 +1569,13 @@ public class UByteArray extends PrimitiveArray {
                 if (currentValue < lastValue) 
                     alreadySorted = false;
                 lastValue = currentValue;
-                hashMap.put(new Short(lastValue), dummy);
+                hashMap.put(Short.valueOf(lastValue), dummy);
             }
         }
 
         //quickly deal with: all unique and already sorted
-        Set keySet = hashMap.keySet();
-        int nUnique = keySet.size();
+        final Set keySet = hashMap.keySet();
+        final int nUnique = keySet.size();
         if (nUnique == size && alreadySorted) {
             indices.ensureCapacity(size);
             for (int i = 0; i < size; i++)
@@ -1586,8 +1584,8 @@ public class UByteArray extends PrimitiveArray {
         }
 
         //store all the elements in an array
-        Object unique[] = new Object[nUnique];
-        Iterator iterator = keySet.iterator();
+        final Object unique[] = new Object[nUnique];
+        final Iterator iterator = keySet.iterator();
         int count = 0;
         while (iterator.hasNext())
             unique[count++] = iterator.next();
@@ -1600,23 +1598,23 @@ public class UByteArray extends PrimitiveArray {
 
         //put the unique values back in the hashMap with the ranks as the associated values
         //and make tUnique 
-        short tUnique[] = new short[nUnique];
+        final short tUnique[] = new short[nUnique];
         for (int i = 0; i < count; i++) {
-            hashMap.put(unique[i], new Integer(i));
+            hashMap.put(unique[i], Integer.valueOf(i));
             tUnique[i] = ((Short)unique[i]).shortValue();
         }
 
         //convert original values to ranks
-        int ranks[] = new int[size];
+        final int ranks[] = new int[size];
         lastValue = unpack(array[0]);
-        ranks[0] = ((Integer)hashMap.get(new Short(lastValue))).intValue();
+        ranks[0] = ((Integer)hashMap.get(Short.valueOf(lastValue))).intValue();
         int lastRank = ranks[0];
         for (int i = 1; i < size; i++) {
             if (array[i] == lastValue) {
                 ranks[i] = lastRank;
             } else {
                 lastValue = unpack(array[i]);
-                ranks[i] = ((Integer)hashMap.get(new Short(lastValue))).intValue();
+                ranks[i] = ((Integer)hashMap.get(Short.valueOf(lastValue))).intValue();
                 lastRank = ranks[i];
             }
         }
@@ -1635,10 +1633,10 @@ public class UByteArray extends PrimitiveArray {
      * @param tTo   the new value (use "" or "NaN"  for standard missingValue)
      * @return the number of values switched
      */
-    public int switchFromTo(String tFrom, String tTo) {
-        byte packedFrom = pack(Math2.roundToUByte(String2.parseDouble(tFrom)));
-        double d = String2.parseDouble(tTo);
-        byte packedTo   = pack(Math2.roundToUByte(d));
+    public int switchFromTo(final String tFrom, final String tTo) {
+        final byte packedFrom = pack(Math2.roundToUByte(String2.parseDouble(tFrom)));
+        final double d = String2.parseDouble(tTo);
+        final byte packedTo   = pack(Math2.roundToUByte(d));
         //String2.log(">> UByteArray.switchFromTo " + tFrom + "=" + packedFrom + " to " + tTo + "=" + packedTo);
         if (packedFrom == packedTo)
             return 0;
