@@ -79,7 +79,7 @@ public class UIntArray extends PrimitiveArray {
      * @param index The index in question
      * @return true if the value is a missing value.
      */
-    public boolean isMaxValue(int index) {
+    public boolean isMaxValue(final int index) {
         return getPacked(index) == PACKED_MAX_VALUE;
     }
 
@@ -90,21 +90,21 @@ public class UIntArray extends PrimitiveArray {
      * @param index The index in question
      * @return true if the value is a missing value.
      */
-    public boolean isMissingValue(int index) {
+    public boolean isMissingValue(final int index) {
         return maxIsMV && isMaxValue(index);
     }
 
     /**
      * This packs a signed long holding an unsigned int as a int.
      */
-    public static int pack(long i) {
+    public static int pack(final long i) {
         return i < 0 || i >= MAX_VALUE? PACKED_MAX_VALUE : (int)(i & MAX_VALUE);
     }
 
     /**
      * This unpacks a uint stored in an int as a long.
      */
-    public static long unpack(int i) {
+    public static long unpack(final int i) {
         return i >= 0? i : i + MAX_VALUE + 1;
     }
 
@@ -137,7 +137,7 @@ public class UIntArray extends PrimitiveArray {
      *
      * @param primitiveArray a primitiveArray of any type 
      */
-    public UIntArray(PrimitiveArray primitiveArray) {
+    public UIntArray(final PrimitiveArray primitiveArray) {
         array = new int[primitiveArray.size()]; //exact size
         append(primitiveArray);
     }
@@ -149,7 +149,7 @@ public class UIntArray extends PrimitiveArray {
      * @param active if true, size will be set to capacity and all elements 
      *    will equal 0; else size = 0.
      */
-    public UIntArray(int capacity, boolean active) {
+    public UIntArray(final int capacity, final boolean active) {
         Math2.ensureMemoryAvailable(4L * capacity, "UIntArray");
         array = new int[capacity];
         if (active) 
@@ -162,7 +162,7 @@ public class UIntArray extends PrimitiveArray {
      * @param first the value of the first element.
      * @param last the value of the last element (inclusive!).
      */
-    public UIntArray(int first, int last) {
+    public UIntArray(final int first, final int last) {
         size = last - first + 1;
         array = new int[size];
         for (int i = 0; i < size; i++) 
@@ -175,7 +175,7 @@ public class UIntArray extends PrimitiveArray {
      *
      * @param anArray the array with already packed values to be used as this object's array.
      */
-    public UIntArray(int[] anArray) {
+    public UIntArray(final int[] anArray) {
         array = anArray;
         size = anArray.length;
     }
@@ -186,7 +186,7 @@ public class UIntArray extends PrimitiveArray {
      *
      * @param anArray the array with not-yet-packed values.
      */
-    public UIntArray(long[] anArray) {
+    public UIntArray(final long[] anArray) {
         size = anArray.length;
         Math2.ensureMemoryAvailable(4L * size, "UIntArray");
         array = new int[size];
@@ -204,7 +204,7 @@ public class UIntArray extends PrimitiveArray {
      */
     public PrimitiveArray makeSignedPA() {
         Math2.ensureMemoryAvailable(4L * size, "UIntArray");
-        int ar[] = new int[size];
+        final int ar[] = new int[size];
         System.arraycopy(array, 0, ar, 0, size);
         return new IntArray(ar);
     }
@@ -219,7 +219,7 @@ public class UIntArray extends PrimitiveArray {
      * @param csv the comma-separated-value string
      * @return a UIntArray from the comma-separated values.
      */
-    public static UIntArray fromCSV(String csv) {
+    public static UIntArray fromCSV(final String csv) {
         return (UIntArray)PrimitiveArray.csvFactory(PAType.UINT, csv);
     }
 
@@ -261,6 +261,7 @@ public class UIntArray extends PrimitiveArray {
         for (int i = 0; i < size; i++)
             code = 31*code + array[i];
         return code;
+        //return HashDigest.murmur32(array, size);
     }
 
     /**
@@ -275,7 +276,7 @@ public class UIntArray extends PrimitiveArray {
      *    If new, it will have a backing array with a capacity equal to its size.
      *    If stopIndex &lt; startIndex, this returns PrimitiveArray with size=0;
      */
-    public PrimitiveArray subset(PrimitiveArray pa, int startIndex, int stride, int stopIndex) {
+    public PrimitiveArray subset(final PrimitiveArray pa, final int startIndex, final int stride, int stopIndex) {
         if (pa != null)
             pa.clear();
         if (startIndex < 0)
@@ -289,7 +290,7 @@ public class UIntArray extends PrimitiveArray {
         if (stopIndex < startIndex)
             return pa == null? new UIntArray(new int[0]) : pa;  //no need to call .setMaxIsMV(maxIsMV) since size=0
 
-        int willFind = strideWillFind(stopIndex - startIndex + 1, stride);
+        final int willFind = strideWillFind(stopIndex - startIndex + 1, stride);
         UIntArray ia = null;
         if (pa == null) {
             ia = new UIntArray(willFind, true);
@@ -298,7 +299,7 @@ public class UIntArray extends PrimitiveArray {
             ia.ensureCapacity(willFind);
             ia.size = willFind;
         }
-        int tar[] = ia.array;
+        final int tar[] = ia.array;
         if (stride == 1) {
             System.arraycopy(array, startIndex, tar, 0, willFind);
         } else {
@@ -325,21 +326,19 @@ public class UIntArray extends PrimitiveArray {
      * @return the minimum PAType needed to completely and precisely contain
      * the values in this PA's PAType and tPAType (e.g., when merging two PrimitiveArrays).
      */
-    public PAType needPAType(PAType tPAType) {
-        //if tPAType is smaller or same, return this.PAType
-        if (tPAType == PAType.UBYTE ||
-            tPAType == PAType.USHORT ||
-            tPAType == PAType.UINT)  return PAType.UINT;
+    public PAType needPAType(final PAType tPAType) {
+        return switch (tPAType) {
+            //if tPAType is smaller or same, return this.PAType
+            case UBYTE, USHORT, UINT -> PAType.UINT;
 
-        //if sideways
-        if (tPAType == PAType.CHAR)  return PAType.STRING;
-        if (tPAType == PAType.BYTE ||
-            tPAType == PAType.SHORT ||
-            tPAType == PAType.INT)   return PAType.LONG;
-        if (tPAType == PAType.FLOAT) return PAType.STRING;
+            //if sideways
+            case CHAR                -> PAType.STRING;
+            case BYTE, SHORT, INT    -> PAType.LONG;
+            case FLOAT               -> PAType.DOUBLE; //better than String above
 
-        //if tPAType is bigger.    LONG, ULONG, DOUBLE, STRING
-        return tPAType;
+            //if tPAType is bigger.    LONG, ULONG, DOUBLE, STRING
+            default                  -> tPAType;
+        };
     }
 
     /**
@@ -347,7 +346,7 @@ public class UIntArray extends PrimitiveArray {
      *
      * @param value the value to be added to the array
      */
-    public void add(long value) {
+    public void add(final long value) {
         if (size == array.length) //if we're at capacity
             ensureCapacity(size + 1L);
         if (value < 0)
@@ -360,7 +359,7 @@ public class UIntArray extends PrimitiveArray {
      *
      * @param packedValue the already packed value to be added to the array
      */
-    public void addPacked(int packedValue) {
+    public void addPacked(final int packedValue) {
         if (size == array.length) //if we're at capacity
             ensureCapacity(size + 1L);
         array[size++] = packedValue;
@@ -375,10 +374,10 @@ public class UIntArray extends PrimitiveArray {
      *    then convert DoubleArray to UIntArray.)
      *    If null or not a Number, this adds MAX_VALUE.
      */
-    public void addObject(Object value) {
+    public void addObject(final Object value) {
         //double is good intermediate because it has the idea of NaN
-        addDouble(value != null && value instanceof Number?
-            ((Number)value).doubleValue() : Double.NaN); 
+        addDouble(value != null && value instanceof Number nu?
+            nu.doubleValue() : Double.NaN); 
     }
 
     /**
@@ -387,7 +386,7 @@ public class UIntArray extends PrimitiveArray {
      * @param sd from an .nc file
      * @param memberName
      */
-    public void add(StructureData sd, String memberName) {
+    public void add(final StructureData sd, final String memberName) {
         addPacked(sd.getScalarInt(memberName));
     }
 
@@ -396,8 +395,8 @@ public class UIntArray extends PrimitiveArray {
      *
      * @param ar an array
      */
-    public void add(int ar[]) {
-        int arSize = ar.length; 
+    public void add(final int ar[]) {
+        final int arSize = ar.length; 
         ensureCapacity(size + (long)arSize);
         System.arraycopy(ar, 0, array, size, arSize);
         size += arSize;
@@ -410,7 +409,7 @@ public class UIntArray extends PrimitiveArray {
      * @param value the value to be added to the array.
      *    n &lt; 0 throws an Exception.
      */
-    public void addN(int n, long value) {
+    public void addN(final int n, final long value) {
         if (n == 0) return;
         if (n < 0)
             throw new IllegalArgumentException(MessageFormat.format(
@@ -427,7 +426,7 @@ public class UIntArray extends PrimitiveArray {
      * @param index the position where the value should be inserted.
      * @param value the value to be inserted into the array
      */
-    public void atInsert(int index, long value) {
+    public void atInsert(final int index, final long value) {
 //String2.log(">>UIntArray index=" + index + " value=" + value + " size=" + size + " al=" + array.length);
         if (index < 0 || index > size)
             throw new IllegalArgumentException(MessageFormat.format(
@@ -446,8 +445,8 @@ public class UIntArray extends PrimitiveArray {
      * @param index 0..
      * @param value the value, as a String.
      */
-    public void atInsertString(int index, String value) {
-        long tl = String2.parseLong(value); //NaN -> Long.MAX_VALUE
+    public void atInsertString(final int index, final String value) {
+        final long tl = String2.parseLong(value); //NaN -> Long.MAX_VALUE
         if (tl < MIN_VALUE || tl > MAX_VALUE) {
             maxIsMV = true;
             atInsert(index, MAX_VALUE);
@@ -463,7 +462,7 @@ public class UIntArray extends PrimitiveArray {
      *    If less than 0, this throws Exception.
      * @param value the value, as a PAOne (or null).
      */
-    public void addNPAOnes(int n, PAOne value) {
+    public void addNPAOnes(final int n, final PAOne value) {
         addNLongs(n, value == null? Long.MAX_VALUE : value.getLong());  //handles NaN and MV
     }
 
@@ -474,7 +473,7 @@ public class UIntArray extends PrimitiveArray {
      *    If less than 0, this throws Exception.
      * @param value the value, as a String.
      */
-    public void addNStrings(int n, String value) {
+    public void addNStrings(final int n, final String value) {
         addNLongs(n, String2.parseLong(value)); //handles NaN and MV
     }
 
@@ -485,7 +484,7 @@ public class UIntArray extends PrimitiveArray {
      *    If less than 0, this throws Exception.
      * @param value the value, as a float.
      */
-    public void addNFloats(int n, float value) {
+    public void addNFloats(final int n, final float value) {
         if (!maxIsMV && (!Float.isFinite(value) || value < MIN_VALUE || value > MAX_VALUE)) 
             maxIsMV = true;
         addN(n, Math2.roundToUInt(value));
@@ -498,7 +497,7 @@ public class UIntArray extends PrimitiveArray {
      *    If less than 0, this throws Exception.
      * @param value the value, as a double.
      */
-    public void addNDoubles(int n, double value) {
+    public void addNDoubles(final int n, final double value) {
         if (!maxIsMV && (!Double.isFinite(value) || value < MIN_VALUE || value > MAX_VALUE)) 
             maxIsMV = true;
         addN(n, Math2.roundToUInt(value));
@@ -510,7 +509,7 @@ public class UIntArray extends PrimitiveArray {
      * @param n the number of times 'value' should be added
      * @param value the value, as an int.
      */
-    public void addNInts(int n, int value) {
+    public void addNInts(final int n, final int value) {
         if (value < MIN_VALUE) {
             maxIsMV = true;
             addN(n, MAX_VALUE);
@@ -525,7 +524,7 @@ public class UIntArray extends PrimitiveArray {
      * @param n the number of times 'value' should be added
      * @param value the value, as an int.
      */
-    public void addNLongs(int n, long value) {
+    public void addNLongs(final int n, final long value) {
         if (value < MIN_VALUE || value > MAX_VALUE) {
             maxIsMV = true;
             addN(n, MAX_VALUE);
@@ -542,7 +541,7 @@ public class UIntArray extends PrimitiveArray {
      * @param nValues the number of values to be added
      * @return 'this' for convenience
      */
-    public PrimitiveArray addFromPA(PrimitiveArray otherPA, int otherIndex, int nValues) {
+    public PrimitiveArray addFromPA(final PrimitiveArray otherPA, int otherIndex, final int nValues) {
 
         //add from same type
         if (otherPA.elementType() == elementType()) {
@@ -572,7 +571,7 @@ public class UIntArray extends PrimitiveArray {
      * @param otherPA the other PrimitiveArray
      * @param otherIndex the index of the item in otherPA
      */
-    public void setFromPA(int index, PrimitiveArray otherPA, int otherIndex) {
+    public void setFromPA(final int index, final PrimitiveArray otherPA, final int otherIndex) {
         set(index, otherPA.getLong(otherIndex)); //handles maxIsMV
     }
 
@@ -581,7 +580,7 @@ public class UIntArray extends PrimitiveArray {
      *
      * @param index the element to be removed, 0 ... size-1
      */
-    public void remove(int index) {
+    public void remove(final int index) {
         if (index >= size)
             throw new IllegalArgumentException(MessageFormat.format(
                 ArrayRemove, getClass().getSimpleName(), "" + index, "" + size));
@@ -597,7 +596,7 @@ public class UIntArray extends PrimitiveArray {
      * @param from the first element to be removed, 0 ... size
      * @param to one after the last element to be removed, from ... size
      */
-    public void removeRange(int from, int to) {
+    public void removeRange(final int from, final int to) {
         if (to > size)
             throw new IllegalArgumentException(String2.ERROR + " in UIntArray.removeRange: to (" + 
                 to + ") > size (" + size + ").");
@@ -621,8 +620,8 @@ public class UIntArray extends PrimitiveArray {
      * @param last  (exclusive)
      * @param destination the destination, can't be in the range 'first+1..last-1'.
      */
-    public void move(int first, int last, int destination) {
-        String errorIn = String2.ERROR + " in UIntArray.move:\n";
+    public void move(final int first, final int last, final int destination) {
+        final String errorIn = String2.ERROR + " in UIntArray.move:\n";
 
         if (first < 0) 
             throw new RuntimeException(errorIn + "first (" + first + ") must be >= 0.");
@@ -644,8 +643,8 @@ public class UIntArray extends PrimitiveArray {
         //String2.log("move initial " + String2.toCSSVString(array));
 
         //store the range to be moved
-        int nToMove = last - first;
-        int[] temp = new int[nToMove];
+        final int nToMove = last - first;
+        final int[] temp = new int[nToMove];
         System.arraycopy(array, first, temp, 0, nToMove);
 
         //if moving to left...    (draw diagram to visualize this)
@@ -675,7 +674,7 @@ public class UIntArray extends PrimitiveArray {
      *
      * @param bitset The BitSet indicating which rows (indices) should be kept.
      */
-    public void justKeep(BitSet bitset) {
+    public void justKeep(final BitSet bitset) {
         int newSize = 0;
         for (int row = 0; row < size; row++) {
             if (bitset.get(row)) 
@@ -690,7 +689,7 @@ public class UIntArray extends PrimitiveArray {
      * @param minCapacity the minimum acceptable capacity.
      *    minCapacity is type long, but &gt;= Integer.MAX_VALUE will throw exception.
      */
-    public void ensureCapacity(long minCapacity) {
+    public void ensureCapacity(final long minCapacity) {
         if (array.length < minCapacity) {
             //ensure minCapacity is < Integer.MAX_VALUE
             Math2.ensureArraySizeOkay(minCapacity, "UIntArray");  
@@ -699,7 +698,7 @@ public class UIntArray extends PrimitiveArray {
             if (newCapacity < minCapacity) 
                 newCapacity = (int)minCapacity; //safe since checked above
             Math2.ensureMemoryAvailable(4L * newCapacity, "UIntArray");
-            int[] newArray = new int[newCapacity];
+            final int[] newArray = new int[newCapacity];
             System.arraycopy(array, 0, newArray, 0, size);
             array = newArray; //do last to minimize concurrency problems
         }
@@ -742,11 +741,11 @@ public class UIntArray extends PrimitiveArray {
      * @return an array (perhaps 'array') which has 'size' elements.
      */
     public BitSet toBitSet() {
-        double stats[] = calculateStats();
-        int max = Math2.roundToInt(stats[PrimitiveArray.STATS_MAX]);
-        BitSet bitSet = new BitSet(max + 1);  //+1 so 0..max
+        final double stats[] = calculateStats();
+        final int max = Math2.roundToInt(stats[PrimitiveArray.STATS_MAX]);
+        final BitSet bitSet = new BitSet(max + 1);  //+1 so 0..max
         for (int i = 0; i < size; i++) {
-            int ti = array[i];
+            final int ti = array[i];
             if (ti >= 0)
                 bitSet.set(ti);
         }
@@ -761,7 +760,7 @@ public class UIntArray extends PrimitiveArray {
      */
     public double[] toDoubleArray() {
         Math2.ensureMemoryAvailable(8L * size, "UIntArray.toDoubleArray");
-        double dar[] = new double[size];
+        final double dar[] = new double[size];
         for (int i = 0; i < size; i++) {
             long j = unpack(array[i]);
             dar[i] = maxIsMV && j == MAX_VALUE? Double.NaN : j;
@@ -777,9 +776,9 @@ public class UIntArray extends PrimitiveArray {
      */
     public String[] toStringArray() {
         Math2.ensureMemoryAvailable(8L * size, "UIntArray.toStringArray"); //8L is feeble minimal estimate
-        String sar[] = new String[size];
+        final String sar[] = new String[size];
         for (int i = 0; i < size; i++) {
-            long j = unpack(array[i]);
+            final long j = unpack(array[i]);
             sar[i] = maxIsMV && j == MAX_VALUE? "" : String.valueOf(j);
         }
         return sar;
@@ -791,7 +790,7 @@ public class UIntArray extends PrimitiveArray {
      * @param index 0 ... size-1
      * @return the specified element
      */
-    public long get(int index) {
+    public long get(final int index) {
         if (index >= size)
             throw new IllegalArgumentException(String2.ERROR + " in UIntArray.get: index (" + 
                 index + ") >= size (" + size + ").");
@@ -804,7 +803,7 @@ public class UIntArray extends PrimitiveArray {
      * @param index 0 ... size-1
      * @return the specified element
      */
-    public int getPacked(int index) {
+    public int getPacked(final int index) {
         if (index >= size)
             throw new IllegalArgumentException(String2.ERROR + " in UIntArray.get: index (" + 
                 index + ") >= size (" + size + ").");
@@ -817,7 +816,7 @@ public class UIntArray extends PrimitiveArray {
      * @param index 0 ... size-1
      * @param value the value for that element
      */
-    public void set(int index, long value) {
+    public void set(final int index, final long value) {
         if (index >= size)
             throw new IllegalArgumentException(String2.ERROR + " in UIntArray.set: index (" + 
                 index + ") >= size (" + size + ").");
@@ -831,8 +830,8 @@ public class UIntArray extends PrimitiveArray {
      * @param index the index number 0 ... size-1
      * @return the value as an int. 
      */
-    public int getInt(int index) {
-        long i = get(index);
+    public int getInt(final int index) {
+        final long i = get(index);
         return i >= Integer.MAX_VALUE? Integer.MAX_VALUE : (int)i;
     }
 
@@ -844,7 +843,7 @@ public class UIntArray extends PrimitiveArray {
      * @param index the index number 0 .. size-1
      * @param i the value.
      */
-    public void setInt(int index, int i) {
+    public void setInt(final int index, final int i) {
         if (i < MIN_VALUE) {
             maxIsMV = true;
             set(index, MAX_VALUE);
@@ -860,8 +859,8 @@ public class UIntArray extends PrimitiveArray {
      * @return the value as a long. 
      *   If maxIsMV, MAX_VALUE is returned as Long.MAX_VALUE.
      */
-    public long getLong(int index) {
-        long i = get(index);
+    public long getLong(final int index) {
+        final long i = get(index);
         return maxIsMV && i == MAX_VALUE? Long.MAX_VALUE : i;
     }
 
@@ -872,7 +871,7 @@ public class UIntArray extends PrimitiveArray {
      * @param i the value. For numeric PrimitiveArray's, it is narrowed 
      *   if needed by methods like Math2.narrowToUInt(long).
      */
-    public void setLong(int index, long i) {
+    public void setLong(final int index, final long i) {
         if (i < MIN_VALUE || i > MAX_VALUE) {
             maxIsMV = true;
             set(index, MAX_VALUE);
@@ -888,8 +887,8 @@ public class UIntArray extends PrimitiveArray {
      * @return the value as a ulong. 
      *   If maxIsMV, MAX_VALUE is returned as null.
      */
-    public BigInteger getULong(int index) {
-        long b = get(index);
+    public BigInteger getULong(final int index) {
+        final long b = get(index);
         return maxIsMV && b == MAX_VALUE? null : new BigInteger("" + b);
     }
 
@@ -900,7 +899,7 @@ public class UIntArray extends PrimitiveArray {
      * @param i the value. For numeric PrimitiveArray's, it is narrowed 
      *   if needed by methods like Math2.narrowToByte(long).
      */
-    public void setULong(int index, BigInteger i) {
+    public void setULong(final int index, final BigInteger i) {
         setDouble(index, i == null? Double.NaN : i.doubleValue()); //easier to work with. handles NaN. wide range
     }
 
@@ -914,8 +913,8 @@ public class UIntArray extends PrimitiveArray {
      *   with String2.parseFloat and so may return Float.NaN.
      *   If maxIsMV, MAX_VALUE is returned as Float.NaN.
      */
-    public float getFloat(int index) {
-        long i = get(index);
+    public float getFloat(final int index) {
+        final long i = get(index);
         return maxIsMV && i == MAX_VALUE? Float.NaN : i;
     }
 
@@ -926,7 +925,7 @@ public class UIntArray extends PrimitiveArray {
      * @param d the value. For numeric PrimitiveArray, it is narrowed 
      *   if needed by methods like Math2.roundToUInt(d).
      */
-    public void setFloat(int index, float d) {
+    public void setFloat(final int index, final float d) {
         if (!maxIsMV && (!Float.isFinite(d) || d < MIN_VALUE || d > MAX_VALUE)) 
             maxIsMV = true;
         set(index, Math2.roundToUInt(d));
@@ -941,8 +940,8 @@ public class UIntArray extends PrimitiveArray {
      *   with String2.parseDouble and so may return Double.NaN.
      *   If maxIsMV, MAX_VALUE is returned as Double.NaN.
      */
-    public double getDouble(int index) {
-        long i = get(index);
+    public double getDouble(final int index) {
+        final long i = get(index);
         return maxIsMV && i == MAX_VALUE? Double.NaN : i;
     }
 
@@ -956,7 +955,7 @@ public class UIntArray extends PrimitiveArray {
      * @return the value as a double. String values are parsed
      *   with String2.parseDouble and so may return Double.NaN.
      */
-    public double getUnsignedDouble(int index) {
+    public double getUnsignedDouble(final int index) {
         return getDouble(index); //already unsigned
     }
 
@@ -971,7 +970,7 @@ public class UIntArray extends PrimitiveArray {
      * @return the value as a double. String values are parsed
      *   with String2.parseDouble and so may return Double.NaN.
      */
-    public double getRawDouble(int index) {
+    public double getRawDouble(final int index) {
         return get(index);
     }
 
@@ -982,7 +981,7 @@ public class UIntArray extends PrimitiveArray {
      * @param d the value. For numeric PrimitiveArray, it is narrowed 
      *   if needed by methods like Math2.roundToUInt(d).
      */
-    public void setDouble(int index, double d) {
+    public void setDouble(final int index, final double d) {
         if (!maxIsMV && (!Double.isFinite(d) || d < MIN_VALUE || d > MAX_VALUE)) 
             maxIsMV = true;
         set(index, Math2.roundToUInt(d));
@@ -997,8 +996,8 @@ public class UIntArray extends PrimitiveArray {
      *   or "" for NaN or infinity.
      *   If this PA is unsigned, this method returns the unsigned value.
      */
-    public String getString(int index) {
-        int b = getPacked(index);
+    public String getString(final int index) {
+        final int b = getPacked(index);
         return maxIsMV && b == PACKED_MAX_VALUE? "" : String.valueOf(unpack(b));
     }
 
@@ -1011,8 +1010,8 @@ public class UIntArray extends PrimitiveArray {
      * @return For numeric types, this returns ("" + ar[index]), or "null" for NaN or infinity.
      *   If this PA is unsigned, this method returns the unsigned value (never "null").
      */
-    public String getJsonString(int index) {
-        int b = getPacked(index);
+    public String getJsonString(final int index) {
+        final int b = getPacked(index);
         return maxIsMV && b == PACKED_MAX_VALUE? "null" : String.valueOf(unpack(b));
     }
 
@@ -1027,7 +1026,7 @@ public class UIntArray extends PrimitiveArray {
      * @param index the index number 0 ... size-1
      * @return the value as a String. 
      */
-    public String getRawString(int index) {
+    public String getRawString(final int index) {
         return String.valueOf(get(index));
     }
 
@@ -1038,7 +1037,7 @@ public class UIntArray extends PrimitiveArray {
      * @param s the value. For numeric PrimitiveArray's, it is parsed
      *   with String2.parseLong.
      */
-    public void setString(int index, String s) {
+    public void setString(final int index, final String s) {
         set(index, String2.parseLong(s)); //handles mv
     }
 
@@ -1049,7 +1048,7 @@ public class UIntArray extends PrimitiveArray {
      * @param lookFor the value to be looked for
      * @return the index where 'lookFor' is found, or -1 if not found.
      */
-    public int indexOf(long lookFor) {
+    public int indexOf(final long lookFor) {
         return indexOf(lookFor, 0);
     }
 
@@ -1060,8 +1059,8 @@ public class UIntArray extends PrimitiveArray {
      * @param startIndex 0 ... size-1
      * @return the index where 'lookFor' is found, or -1 if not found.
      */
-    public int indexOf(long lookFor, int startIndex) {
-        int packedLookFor = pack(lookFor);
+    public int indexOf(final long lookFor, final int startIndex) {
+        final int packedLookFor = pack(lookFor);
         for (int i = startIndex; i < size; i++) 
             if (array[i] == packedLookFor) 
                 return i;
@@ -1075,7 +1074,7 @@ public class UIntArray extends PrimitiveArray {
      * @param startIndex 0 ... size-1
      * @return the index where 'lookFor' is found, or -1 if not found.
      */
-    public int indexOf(String lookFor, int startIndex) {
+    public int indexOf(final String lookFor, final int startIndex) {
         if (startIndex >= size)
             return -1;
         return indexOf(String2.parseLong(lookFor), startIndex);
@@ -1088,11 +1087,11 @@ public class UIntArray extends PrimitiveArray {
      * @param startIndex 0 ... size-1. The search progresses towards 0.
      * @return the index where 'lookFor' is found, or -1 if not found.
      */
-    public int lastIndexOf(long lookFor, int startIndex) {
+    public int lastIndexOf(final long lookFor, final int startIndex) {
         if (startIndex >= size)
             throw new IllegalArgumentException(String2.ERROR + " in UIntArray.get: startIndex (" + 
                 startIndex + ") >= size (" + size + ").");
-        int packedLookFor = pack(lookFor);
+        final int packedLookFor = pack(lookFor);
         for (int i = startIndex; i >= 0; i--) 
             if (array[i] == packedLookFor) 
                 return i;
@@ -1106,7 +1105,7 @@ public class UIntArray extends PrimitiveArray {
      * @param startIndex 0 ... size-1. The search progresses towards 0.
      * @return the index where 'lookFor' is found, or -1 if not found.
      */
-    public int lastIndexOf(String lookFor, int startIndex) {
+    public int lastIndexOf(final String lookFor, final int startIndex) {
         return lastIndexOf(String2.parseLong(lookFor), startIndex);
     }
 
@@ -1124,7 +1123,7 @@ public class UIntArray extends PrimitiveArray {
      * @param o the object that will be compared to this UIntArray
      * @return true if equal.  o=null returns false.
      */
-    public boolean equals(Object o) {
+    public boolean equals(final Object o) {
         return testEquals(o).length() == 0;
     }
 
@@ -1136,11 +1135,11 @@ public class UIntArray extends PrimitiveArray {
      * @return a String describing the difference (or "" if equal).
      *   o=null doesn't throw an exception.
      */
-    public String testEquals(Object o) {
+    public String testEquals(final Object o) {
         if (!(o instanceof UIntArray))
             return "The two objects aren't equal: this object is a UIntArray; the other is a " + 
                 (o == null? "null" : o.getClass().getName()) + ".";
-        UIntArray other = (UIntArray)o;
+        final UIntArray other = (UIntArray)o;
         if (other.size() != size)
             return "The two UIntArrays aren't equal: one has " + size + 
                " value(s); the other has " + other.size() + " value(s).";
@@ -1162,7 +1161,7 @@ public class UIntArray extends PrimitiveArray {
      */
     public String toString() {
         //estimate 9 bytes/element
-        StringBuilder sb = new StringBuilder(9 * Math.min(size, (Integer.MAX_VALUE-8192) / 9));
+        final StringBuilder sb = new StringBuilder(9 * Math.min(size, (Integer.MAX_VALUE-8192) / 9));
         for (int i = 0; i < size; i++) {
             if (i > 0)
                 sb.append(", ");
@@ -1178,7 +1177,7 @@ public class UIntArray extends PrimitiveArray {
      * @return an NCCSV attribute String
      */
     public String toNccsvAttString() {
-        StringBuilder sb = new StringBuilder(size * 10);
+        final StringBuilder sb = new StringBuilder(size * 10);
         for (int i = 0; i < size; i++) 
             sb.append((i == 0? "" : ",") + unpack(array[i]) + "ui"); 
         return sb.toString();
@@ -1224,7 +1223,7 @@ public class UIntArray extends PrimitiveArray {
      *   the value at index2.  
      *   Think "array[index1] - array[index2]".
      */
-    public int compare(int index1, PrimitiveArray otherPA, int index2) {
+    public int compare(final int index1, final PrimitiveArray otherPA, final int index2) {
         return Long.compare(getLong(index1), otherPA.getLong(index2));  //long handles mv
     }
 
@@ -1237,7 +1236,7 @@ public class UIntArray extends PrimitiveArray {
      * @param from an index number 0 ... size-1
      * @param to an index number 0 ... size-1
      */
-    public void copy(int from, int to) {
+    public void copy(final int from, final int to) {
         array[to] = array[from];
     }
 
@@ -1250,10 +1249,10 @@ public class UIntArray extends PrimitiveArray {
      * in the sorted list, rank[1] is the row number of the
      * second item in the sorted list, ...).
      */
-    public void reorder(int rank[]) {
-        int n = rank.length;
+    public void reorder(final int rank[]) {
+        final int n = rank.length;
         //new length could be n, but I'll keep it the same array.length as before
-        int newArray[] = new int[array.length]; 
+        final int newArray[] = new int[array.length]; 
         for (int i = 0; i < n; i++)
             newArray[i] = array[rank[i]];
         array = newArray;
@@ -1278,7 +1277,7 @@ public class UIntArray extends PrimitiveArray {
      *    But if size=0, this returns 0.
      * @throws Exception if trouble
      */
-    public int writeDos(DataOutputStream dos) throws Exception {
+    public int writeDos(final DataOutputStream dos) throws Exception {
         for (int i = 0; i < size; i++)
             dos.writeInt(array[i]);
         return size == 0? 0 : 4;
@@ -1293,7 +1292,7 @@ public class UIntArray extends PrimitiveArray {
      *    (for Strings, this varies; for others it is consistent)
      * @throws Exception if trouble
      */
-    public int writeDos(DataOutputStream dos, int i) throws Exception {
+    public int writeDos(final DataOutputStream dos, final int i) throws Exception {
         dos.writeInt(array[i]);
         return 4;
     }
@@ -1305,7 +1304,7 @@ public class UIntArray extends PrimitiveArray {
      * @param n the number of elements to be read/added
      * @throws Exception if trouble
      */
-    public void readDis(DataInputStream dis, int n) throws Exception {
+    public void readDis(final DataInputStream dis, final int n) throws Exception {
         ensureCapacity(size + (long)n);
         for (int i = 0; i < n; i++)
             array[size++] = dis.readInt();
@@ -1318,9 +1317,9 @@ public class UIntArray extends PrimitiveArray {
      * @param n the number of elements to be read/added
      * @throws Exception if trouble
      */
-    public void read24BitDis(DataInputStream dis, int n, boolean bigEndian) throws Exception {
+    public void read24BitDis(final DataInputStream dis, final int n, final boolean bigEndian) throws Exception {
         ensureCapacity(size + (long)n);
-        byte bar[] = new byte[3];
+        final byte bar[] = new byte[3];
         for (int i = 0; i < n; i++) {
             dis.readFully(bar);
             array[size++] = bigEndian?
@@ -1336,9 +1335,9 @@ public class UIntArray extends PrimitiveArray {
      * @param n the number of elements to be read/added
      * @throws Exception if trouble
      */
-    public void read24BitDisAudio(DataInputStream dis, int n, boolean bigEndian) throws Exception {
+    public void read24BitDisAudio(final DataInputStream dis, final int n, final boolean bigEndian) throws Exception {
         ensureCapacity(size + (long)n);
-        byte bar[] = new byte[3];
+        final byte bar[] = new byte[3];
         for (int i = 0; i < n; i++) {
             dis.readFully(bar);
             array[size++] = bigEndian?
@@ -1354,8 +1353,8 @@ public class UIntArray extends PrimitiveArray {
      * @param dis
      * @throws IOException if trouble
      */
-    public void internalizeFromDODS(DataInputStream dis) throws java.io.IOException {
-        int nValues = dis.readInt();
+    public void internalizeFromDODS(final DataInputStream dis) throws java.io.IOException {
+        final int nValues = dis.readInt();
         dis.readInt(); //skip duplicate of nValues
         ensureCapacity(size + (long)nValues);
         for (int i = 0; i < nValues; i++) 
@@ -1369,7 +1368,7 @@ public class UIntArray extends PrimitiveArray {
      * @param index
      * @throws Exception if trouble
      */
-    public void writeToRAF(RandomAccessFile raf, int index) throws Exception {
+    public void writeToRAF(final RandomAccessFile raf, final int index) throws Exception {
         raf.writeInt(array[index]);
     }
 
@@ -1380,7 +1379,7 @@ public class UIntArray extends PrimitiveArray {
      * @param raf the RandomAccessFile
      * @throws Exception if trouble
      */
-    public void readFromRAF(RandomAccessFile raf) throws Exception {
+    public void readFromRAF(final RandomAccessFile raf) throws Exception {
         addPacked(raf.readInt());
     }
 
@@ -1391,7 +1390,7 @@ public class UIntArray extends PrimitiveArray {
      * @param n the number of elements to skip
      * @throws Exception if trouble
      */
-    public static void disSkip(DataInputStream dis, int n) throws Exception {
+    public static void disSkip(final DataInputStream dis, final int n) throws Exception {
         int nBytes = 4 * n;
         while (nBytes > 0) nBytes -= dis.skipBytes(nBytes);
     }
@@ -1403,8 +1402,8 @@ public class UIntArray extends PrimitiveArray {
      * @return param n the number of elements to skip
      * @throws Exception if trouble
      */
-    public static double readDisAsDouble(DataInputStream dis) throws Exception {
-        int i = dis.readInt();
+    public static double readDisAsDouble(final DataInputStream dis) throws Exception {
+        final int i = dis.readInt();
         return i == MAX_VALUE? Double.NaN : i;
     }
     
@@ -1416,13 +1415,13 @@ public class UIntArray extends PrimitiveArray {
      * @param pa pa must be the same or a narrower 
      *  data type, or the data will be narrowed with pa.getUInt.
      */
-    public void append(PrimitiveArray pa) {
-        int otherSize = pa.size(); 
+    public void append(final PrimitiveArray pa) {
+        final int otherSize = pa.size(); 
         ensureCapacity(size + (long)otherSize);
-        if (pa instanceof UIntArray) {
+        if (pa instanceof UIntArray ua) {
             if (pa.getMaxIsMV())
                 setMaxIsMV(true);
-            System.arraycopy(((UIntArray)pa).array, 0, array, size, otherSize);
+            System.arraycopy(ua.array, 0, array, size, otherSize);
             size += otherSize;
         } else {
             for (int i = 0; i < otherSize; i++)
@@ -1440,11 +1439,11 @@ public class UIntArray extends PrimitiveArray {
      * @param pa pa must be the same or a narrower 
      *  data type, or the data will be narrowed with pa.getUInt.
      */
-    public void rawAppend(PrimitiveArray pa) {
-        int otherSize = pa.size(); 
+    public void rawAppend(final PrimitiveArray pa) {
+        final int otherSize = pa.size(); 
         ensureCapacity(size + (long)otherSize);
-        if (pa instanceof UIntArray) {
-            System.arraycopy(((UIntArray)pa).array, 0, array, size, otherSize);
+        if (pa instanceof UIntArray ua) {
+            System.arraycopy(ua.array, 0, array, size, otherSize);
         } else {
             for (int i = 0; i < otherSize; i++)
                 array[size + i] = pack(Math2.roundToUInt(pa.getRawDouble(i)));  //this DOESN'T convert mv's
@@ -1461,17 +1460,17 @@ public class UIntArray extends PrimitiveArray {
      * @return a PrimitveArray (the same type as this class) with the unique values, sorted.
      *     If all the values are unique and already sorted, this returns 'this'.
      */
-    public PrimitiveArray makeIndices(IntArray indices) {
+    public PrimitiveArray makeIndices(final IntArray indices) {
         indices.clear();
         if (size == 0) {
             return new UIntArray();
         }
 
         //make a hashMap with all the unique values (associated values are initially all dummy)
-        Integer dummy = new Integer(-1);
-        HashMap hashMap = new HashMap(Math2.roundToInt(1.4 * size));
+        final Integer dummy = Integer.valueOf(-1);
+        final HashMap hashMap = new HashMap(Math2.roundToInt(1.4 * size));
         long lastValue = unpack(array[0]); //since lastValue often equals currentValue, cache it
-        hashMap.put(new Long(lastValue), dummy);
+        hashMap.put(Long.valueOf(lastValue), dummy);
         boolean alreadySorted = true;
         for (int i = 1; i < size; i++) {
             long currentValue = unpack(array[i]);
@@ -1479,13 +1478,13 @@ public class UIntArray extends PrimitiveArray {
                 if (currentValue < lastValue) 
                     alreadySorted = false;
                 lastValue = currentValue;
-                hashMap.put(new Long(lastValue), dummy);
+                hashMap.put(Long.valueOf(lastValue), dummy);
             }
         }
 
         //quickly deal with: all unique and already sorted
-        Set keySet = hashMap.keySet();
-        int nUnique = keySet.size();
+        final Set keySet = hashMap.keySet();
+        final int nUnique = keySet.size();
         if (nUnique == size && alreadySorted) {
             indices.ensureCapacity(size);
             for (int i = 0; i < size; i++)
@@ -1494,8 +1493,8 @@ public class UIntArray extends PrimitiveArray {
         }
 
         //store all the elements in an array
-        Object unique[] = new Object[nUnique];
-        Iterator iterator = keySet.iterator();
+        final Object unique[] = new Object[nUnique];
+        final Iterator iterator = keySet.iterator();
         int count = 0;
         while (iterator.hasNext())
             unique[count++] = iterator.next();
@@ -1508,23 +1507,23 @@ public class UIntArray extends PrimitiveArray {
 
         //put the unique values back in the hashMap with the ranks as the associated values
         //and make tUnique 
-        long tUnique[] = new long[nUnique];
+        final long tUnique[] = new long[nUnique];
         for (int i = 0; i < count; i++) {
-            hashMap.put(unique[i], new Integer(i));
+            hashMap.put(unique[i], Integer.valueOf(i));
             tUnique[i] = ((Long)unique[i]).longValue();
         }
 
         //convert original values to ranks
-        int ranks[] = new int[size];
+        final int ranks[] = new int[size];
         lastValue = unpack(array[0]);
-        ranks[0] = ((Integer)hashMap.get(new Long(lastValue))).intValue();
+        ranks[0] = ((Integer)hashMap.get(Long.valueOf(lastValue))).intValue();
         int lastRank = ranks[0];
         for (int i = 1; i < size; i++) {
             if (array[i] == lastValue) {
                 ranks[i] = lastRank;
             } else {
                 lastValue = unpack(array[i]);
-                ranks[i] = ((Integer)hashMap.get(new Long(lastValue))).intValue();
+                ranks[i] = ((Integer)hashMap.get(Long.valueOf(lastValue))).intValue();
                 lastRank = ranks[i];
             }
         }
@@ -1543,10 +1542,10 @@ public class UIntArray extends PrimitiveArray {
      * @param tTo   the new value (use "" or "NaN"  for standard missingValue)
      * @return the number of values switched
      */
-    public int switchFromTo(String tFrom, String tTo) {
-        int packedFrom = pack(Math2.roundToUInt(String2.parseDouble(tFrom)));
-        double d = String2.parseDouble(tTo);
-        int packedTo   = pack(Math2.roundToUInt(d));
+    public int switchFromTo(final String tFrom, final String tTo) {
+        final int packedFrom = pack(Math2.roundToUInt(String2.parseDouble(tFrom)));
+        final double d = String2.parseDouble(tTo);
+        final int packedTo   = pack(Math2.roundToUInt(d));
         if (packedFrom == packedTo)
             return 0;
         int count = 0;
@@ -1612,7 +1611,7 @@ public class UIntArray extends PrimitiveArray {
      */
     public void changeSignedToFromUnsigned() {
         for (int i = 0; i < size; i++) {
-            int i2 = array[i];
+            final int i2 = array[i];
             array[i] = (int)(i2 < 0? i2 + MAX_VALUE + 1 : 
                                      i2 - MAX_VALUE - 1); //order of ops is important 
         }
