@@ -17,8 +17,8 @@ import java.util.zip.GZIPOutputStream;
 import java.util.zip.DeflaterOutputStream;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 
 /**
  * OutputStreamFromHttpResponse provides an OutputStream upon request.
@@ -717,8 +717,8 @@ public class OutputStreamFromHttpResponse implements OutputStreamSource {
         return new Object[]{
             contentType, 
             headerMap,
-            new Boolean(genericCompressed),
-            new Boolean(otherCompressed)};
+            Boolean.valueOf(genericCompressed),
+            Boolean.valueOf(otherCompressed)};
     }
 
 
