@@ -170,7 +170,7 @@ public class ContourLevels implements Cloneable {
   public ContourLineAttribute getContourLineAttribute(double val)
     throws ContourLevelNotFoundException  {
     ContourLineAttribute attr =
-      (ContourLineAttribute)lineAttrMap_.get(new Double(val));
+      (ContourLineAttribute)lineAttrMap_.get(Double.valueOf(val));
     //System.out.println("contourLevels.getContourLineAtt(" + val + ") label=" + attr.getLabelText());
     if(attr == null) {
       throw new ContourLevelNotFoundException();
@@ -236,7 +236,7 @@ public class ContourLevels implements Cloneable {
    * <code>ContourLineAttribute</code>.
    */
   public void addLevel(double val, ContourLineAttribute l) {
-    Double value = new Double(val);
+    Double value = Double.valueOf(val);
     levels_.addElement(value);
     //System.out.println("contourLevels.addLevel(" + val + ") label=" + l.getLabelText() + "\n" +
     //    com.cohort.util.MustBe.getStackTrace());
@@ -280,7 +280,7 @@ public class ContourLevels implements Cloneable {
    */
   public int getIndex(double val) {
     if(!sorted_) sort();
-    return getIndex(new Double(val));
+    return getIndex(Double.valueOf(val));
   }
   /**
    * Get the maximum level index.
