@@ -319,8 +319,8 @@ public class SimpleLine implements SGTLine, Cartesian,
     xTime_ = false;
     xRange_ = computeSoTRange(xloc);
     changes_.firePropertyChange("dataModified",
-                                new Integer(0),
-                                new Integer(xloc.length));
+                                Integer.valueOf(0),
+                                Integer.valueOf(xloc.length));
   }
   /**
    * Set the Y coordinate array
@@ -331,8 +331,8 @@ public class SimpleLine implements SGTLine, Cartesian,
     yTime_ = false;
     yRange_ = computeSoTRange(yloc);
     changes_.firePropertyChange("dataModified",
-                                new Integer(0),
-                                new Integer(yloc.length));
+                                Integer.valueOf(0),
+                                Integer.valueOf(yloc.length));
   }
   /**
    * Set the Time coordinate array
@@ -352,8 +352,8 @@ public class SimpleLine implements SGTLine, Cartesian,
       yRange_ = computeSoTRange(tarray);
     }
     changes_.firePropertyChange("dataModified",
-                                new Integer(0),
-                                new Integer(tarray.getLength()));
+                                Integer.valueOf(0),
+                                Integer.valueOf(tarray.getLength()));
   }
   public SoTRange getXRange() {
     return xRange_.copy();
