@@ -746,7 +746,7 @@ public class ContourLineAttributeDialog extends JDialog {
     int index = 0;
     float[] array = new float[token.countTokens()];
     while(token.hasMoreTokens()) {
-      array[index] = new Float(token.nextToken()).floatValue();
+      array[index] = Float.valueOf(token.nextToken()).floatValue();
       index++;
     }
     return array;
@@ -768,7 +768,7 @@ public class ContourLineAttributeDialog extends JDialog {
     //
     // width
     //
-    attr_.setWidth(new Float(widthTextField.getText()).floatValue());
+    attr_.setWidth(Float.valueOf(widthTextField.getText()).floatValue());
     attr_.setWidthOverridden(!widthUseDefault.isSelected());
     //
     // dash array
@@ -778,7 +778,7 @@ public class ContourLineAttributeDialog extends JDialog {
     //
     // dash phase
     //
-    attr_.setDashPhase(new Float(dashPhaseTextField.getText()).floatValue());
+    attr_.setDashPhase(Float.valueOf(dashPhaseTextField.getText()).floatValue());
     attr_.setDashPhaseOverridden(!dashPhaseUseDefault.isSelected());
     //
     // cap style
@@ -793,7 +793,7 @@ public class ContourLineAttributeDialog extends JDialog {
     //
     // miter limit
     //
-    attr_.setMiterLimit(new Float(miterLimitTextField.getText()).floatValue());
+    attr_.setMiterLimit(Float.valueOf(miterLimitTextField.getText()).floatValue());
     attr_.setMiterLimitOverridden(!miterLimitUseDefault.isSelected());
     //
     // Label attributes
@@ -810,7 +810,7 @@ public class ContourLineAttributeDialog extends JDialog {
     //
     // heightP
     //
-    attr_.setLabelHeightP(new Double(heightTextField.getText()).doubleValue());
+    attr_.setLabelHeightP(Double.valueOf(heightTextField.getText()).doubleValue());
     attr_.setLabelHeightPOverridden(!heightPUseDefault.isSelected());
     //
     // autoLabel
